starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__namespace_import_without_runtime_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nimport cardano from starstream:std/cardano;\n\nfn main() {\n    let x = cardano::blockHeight();\n}\n"
---
E0039 (https://starstream.nightstream.dev/errors/E0039)

  x `runtime` keyword required to call `runtime fn blockHeight`
   ,-[test.star:4:13]
 3 | fn main() {
 4 |     let x = cardano::blockHeight();
   :             ^^^^^^^^^^^^^^^^^^^^
 5 | }
   `----
