starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__namespace_unknown_function_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nimport cardano from starstream:std/cardano;\n\nfn main() {\n    let x = cardano::nonexistent();\n}\n"
---
E0001 (https://starstream.nightstream.dev/errors/E0001)

  x unknown name `nonexistent`
   ,-[test.star:4:22]
 3 | fn main() {
 4 |     let x = cardano::nonexistent();
   :                      ^^^^^^^^^^^
 5 | }
   `----
