starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__option_missing_generic_args_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x: Option = Option::Some(42);\n}\n"
---
E0042 (https://starstream.nightstream.dev/errors/E0042)

  x type `Option` expects 1 generic argument but 0 were provided
   ,-[test.star:2:12]
 1 | fn test() {
 2 |     let x: Option = Option::Some(42);
   :            ^^^^^^
 3 | }
   `----
