starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__option_none_constructor.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x = Option::None;\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x = Option::None; ⇒ Option<t3>
    T-Var: {test: fn() -> ()} ⊢ Option::None ⇒ Option<t3>
