starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__option_pattern_matching.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x = Option::Some(42);\n    let y = match x {\n        Option::Some(v) => {\n            v\n        },\n        Option::None => {\n            0\n        },\n    };\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x = Option::Some(42); ⇒ Option
    T-Call: {test: fn() -> ()} ⊢ Option::Some(42) ⇒ Option
      T-Var: {test: fn() -> ()} ⊢ Option::Some ⇒ fn(t3) -> Option
      T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t4}
  T-Let: {test: fn() -> (), x: Option} ⊢ let y = match x {
    Option::Some(v) => {
        v
    },
    Option::None => {
        0
    },
}; ⇒ i64
    T-Match: {test: fn() -> (), x: Option} ⊢ match x {
    Option::Some(v) => {
        v
    },
    Option::None => {
        0
    },
} ⇒ i64
      T-Var: {test: fn() -> (), x: Option} ⊢ x ⇒ Option
      Unify-Enum: Option ~ Option => {i64/t3}
        Unify-Var: i64 ~ t0 => {i64/t3}
      T-Tail: v => i64
        T-Var: {test: fn() -> (), v: i64, x: Option} ⊢ v ⇒ i64
      Unify-Enum: Option ~ Option => {}
        Unify-Var: i64 ~ i64 => {}
      T-Tail: 0 => i64
        T-Int: {test: fn() -> (), x: Option} ⊢ 0 ⇒ i64
      Unify-Var: i64 ~ i64 => i64
