starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__option_some_constructor.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x = Option::Some(42);\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> ()} ⊢ let x = Option::Some(42); ⇒ Option
    T-Call: {test: fn() -> ()} ⊢ Option::Some(42) ⇒ Option
      T-Var: {test: fn() -> ()} ⊢ Option::Some ⇒ fn(p0: t3) -> Option
      T-Int: {test: fn() -> ()} ⊢ 42 ⇒ i64
      Unify-Var: i64 ~ t3 => {i64/t4}
