starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__option_wrong_arity.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let x: Option<i64, bool> = Option::Some(42);\n}\n"
---
E0042 (https://starstream.nightstream.dev/errors/E0042)

  x type `Option` expects 1 generic argument but 2 were provided
   ,-[test.star:2:12]
 1 | fn test() {
 2 |     let x: Option<i64, bool> = Option::Some(42);
   :            ^^^^^^
 3 | }
   `----
