starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__pattern_enum_mismatch_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nenum First {\n    Alpha,\n}\n\nenum Second {\n    Beta,\n}\n\nfn test(value: First) {\n    match value {\n        Second::Beta => {\n            ()\n        },\n    }\n}\n"
---
E0025 (https://starstream.nightstream.dev/errors/E0025)

  x pattern references enum `Second` but scrutinee has type `First`
    ,-[test.star:10:11]
  9 | fn test(value: First) {
 10 |     match value {
    :           ^^^^^^
 11 |         Second::Beta => {
    :                 ^^|^
    :                   `-- enum variant mismatch
 12 |             ()
    `----
